2009-05-05  Alan McGovern  <amcgovern@novell.com>

	* xaml.cpp: If 'Key' hasn't been set, use 'Name'. Allows
	  elements to be added to ResourceDictionarys in managed land.

2009-05-05  Jeffrey Stedfast  <fejj@novell.com>

	* layout.cpp (Select): Fixed some selection logic.

	* textbox.cpp (TextBoxBase::Initialize): Create a new GtkIMContext
	and hook up some callbacks. Also init need_im_reset to false.
	(TextBoxBase::~TextBoxBase): Kill the IMContext.
	(TextBoxBase::OnKeyDown): Filter the event key through the
	IMContext. If it handles the key, don't do anything more.
	(TextBoxBase::DeleteSurrounding): New callback method for
	IMContext stuff.
	(TextBoxBase::RetrieveSurrounding): Same.
	(TextBoxBase::Commit): New IMContext callback method to commit the
	input-method chars into the TextBox.
	(TextBoxBase::ResetIMContext): New helper method to reset the
	IMContext.
	(TextBoxBase::OnFocusOut): Update GtkIMContext focus state.
	(TextBoxBase::OnFocusIn): Same.
	(TextBoxBase::OnPropertyChanged): If the IsReadOnly property state
	changes, update the GtkIMContext state accordingly. Same with the
	various Selection states and Text property.

	* eventargs.cpp (GetEvent): New method to get access to the
	original GdkEventKey event for use with GtkIMContext.

2009-05-05  Alan McGovern  <amcgovern@novell.com>

	* geometry.h:
	* animation.h:
	* dependencyproperty.g.cpp: Back out the default value fix
	  until the parser can be updated to handle this.

2009-05-05  Alan McGovern  <amcgovern@novell.com>

	* geometry.h:
	* animation.h:
	* dependencyproperty.g.cpp: PathGeometry.Figures and
	  ObjectAnimationUsingKeyframes.KeyFrames both need to be
	  autogenerated. This allows them to pass their respective
	  DefaultValues tests (when those tests are run).

2009-05-05  Alan McGovern  <amcgovern@novell.com>

	* template.h: Remove the forward decls for TemplateBinding and
	  XamlTemplateBinding as they don't exist in unmanaged anymore
