@@ -1,3 +1,12 @@
+2009-05-05  Jeffrey Stedfast  <fejj@novell.com>
+
+	* textbox.cpp (TextBoxBase::Initialize): Set use_preedit() to
+	false since we're not rendering the preedit strings ourselves.
+	(TextBoxBase::SetSurface): Update the GtkIMContext's client
+	GdkWindow.
+	(TextBoxView::UpdateCursor): Update the GtkIMContext's idea of
+	where the cursor is at.
+
 2009-05-05  Alan McGovern  <amcgovern@novell.com>
 
 	* xaml.cpp: If 'Key' hasn't been set, use 'Name'. Allows
